language_tests/outputs/invalid/result.out
error: no member named 'len' found on type string
 -> language_tests/source_files/invalid/result.tr:5:43
	    let _ = r.map(|x: string| -> int32 { x.len() as int32 })
	                                           ^^^
error: expected string, found int32
 -> language_tests/source_files/invalid/result.tr:5:14
	    let _ = r.map(|x: string| -> int32 { x.len() as int32 })
	              ^^^
